# P4Distill

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml
dataset/BOTIOT/json/: README.md  statistics.json
distillation/: aggregator.py  distill.py  grid_search.py  main_ISCX2016.py  main_botiot.py  main_ciciot.py  opts.py  opts_botiot.py  opts_ciciot.py  opts_iscx2016.py  run.py  run_agg.py  train_teacher.py  trainer2.py
distillation/evaluator/: evaluator.py
distillation/init_states/: BRNN_BOTIOT_seed7.pt
distillation/model/: model_BiLSTM.py  model_BiRNN.py  model_LSTM.py  model_RNN.py  model_Transformers.py  model_realRNN.py  sturent_BRNN_from_BOS.py  teacher_BATLSTM.py  teacher_BBi2ATLSTM.py  teacher_BBiATLSTM.py  teacher_BL3LSTM.py  teacher_BLSTM.py
distillation/model/Binary/: model_BATLSTM.py  model_BBi2ATLSTM.py  model_BBiATLSTM.py  model_BL3LSTM.py  model_BTrans.py  model_CNNGRU.py  model_multiGRU.py
distillation/model/Ternary/: Ternary_a.py  model_BiLSTM.py
distillation/trainers/: student_trainer.py  teacher_trainer.py
distillation/utils/: binary_ops.py  checkpoint.py  classification_metrics.py  curve_logger.py  data_loader.py  seed.py
docs/: api.md  architecture.md  p4_integration.md  usage.md
scripts/: build_exe.ps1
src/distillkit/: __init__.py  api.py  cli.py
src/distillkit/core/: legacy.py
src/distillkit/data/BOTIOT/: statistics.json
src/distillkit/data/ISCXVPN2016/: statistics.json
src/distillkit/export/: p4_export.py
src/distillkit/runtime/: opts_botiot.py  trainer2.py
src/distillkit/runtime/model/: model_BRNN.py
(+88 files in other folders)
