[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distillkit"
version = "0.1.0"
description = "Knowledge distillation toolkit for P4-deployable models."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch",
  "numpy",
  "tqdm",
  "scikit-learn"
]

[project.scripts]
distillkit = "distillkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
distillkit = ["data/**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
